# GPUProgramming

./: README.md
cuda_snippets/: CMakeLists.txt
cuda_snippets/00_SnippetDoku/: CUDA_Snippets_Documentation.tex
cuda_snippets/00_SnippetDoku/chapters/: GPUArch.tex  Snippets.tex  TitlepageWithPicture.tex
cuda_snippets/00_SnippetDoku/imgs/: Architecture.odp
cuda_snippets/00_SnippetDoku/utils/: Abstract.tex  Acknowledgement.tex  Appendix.tex  Bibliography.tex  DeclarationOfAuthorship.tex  DocLayout.tex  Glossary.tex  Header.tex  ListOfFigures.tex  ListOfTables.tex  OwnCmds.tex  Packages.tex  VersionControl.tex
cuda_snippets/00_SnippetDoku/utils/database/: Bibliography.bib  Glossar.tex
cuda_snippets/01_HelloWorld/: CMakeLists.txt  main.cu
cuda_snippets/02_CreateRandomMatrixFile/: CMakeLists.txt  main.cu
cuda_snippets/02_CreateRandomMatrixFile/data/matrices/: Matrix_5x5_A.txt
cuda_snippets/03_matricCalc/: CMakeLists.txt  main.cu
cuda_snippets/04_SystemInfo/: CMakeLists.txt  main.cu
cuda_snippets/04_SystemInfo/data/AnalyzedDevices/: Quadro K420.txt  QuadroP1000_HPLapi.txt
cuda_snippets/05_matricCalcBlocks/: CMakeLists.txt  main.cu
cuda_snippets/05_matricCalcBlocks/data/matrices/: Matrix_16x16_A.txt  Matrix_5x5_B.txt
cuda_snippets/06_matricCalcBlocksSM/: CMakeLists.txt  Stopwatch.h  main.cu
cuda_snippets/06_matricCalcBlocksSM/data/matrices/: Matrix_16x16_B.txt  Matrix_500x500_A.txt
cuda_snippets/07_constantMemory/: CMakeLists.txt  cuda_devicehelper.cpp  kernels.cu  kernels.cuh  main.cu
cuda_snippets/07_constantMemory/data/matrices/: Matrix_512x512_A.txt
cuda_snippets/08_optimSubtraction/: CMakeLists.txt  imagehandler.cpp  imagehandler.h  kernels.cu  kernels.cuh  main.cpp
cuda_snippets/09_MemoryPaging/: CMakeLists.txt  cuda_devicehelper.h  imagehandler.cpp  imagehandler.h  kernels.cu  kernels.cuh  main.cpp
cuda_snippets/10_SimpleAsyncStream/: CMakeLists.txt  main.cu
cuda_snippets/11_AsyncStreamClass/: CMakeLists.txt  cuda_streamer.cpp  cuda_streamer.h  cudaincludes.h  main.cpp
cuda_snippets/11_AsyncStreamClass/Kernels/: kernel_utils.cu  kernel_utils.h  kernels.cuh
cuda_snippets/11_AsyncStreamClass/utils/: Stopwatch.h  cuda_devicehelper.cpp  imagehandler.cpp  imagehandler.h
cuda_snippets/12_AsyncStreamClassImproved/: CMakeLists.txt  cuda_streamer.cpp  cuda_streamer.h  imagedata.cpp  main.cpp
cuda_snippets/12_AsyncStreamClassImproved/Kernels/: kernel_utils.cu  kernel_utils.h  kernels.cu
cuda_snippets/12_AsyncStreamClassImproved/utils/: cuda_devicehelper.h
cuda_snippets/13_ProperCudaErrorHandling/: CMakeLists.txt  cudaincludes.h  imagedata.h  main.cu
cuda_snippets/13_ProperCudaErrorHandling/Kernels/: cuda_errorchecking.h  kernel_utils.cu  kernel_utils.h
cuda_snippets/14_PCI_BW_Test/: CMakeLists.txt  main.cu
cuda_snippets/99_compareMatMulKernels/: CMakeLists.txt  kernels.cu  kernels.cuh  main.cu
cuda_snippets/99_compareMatMulKernels/data/matrices/: Matrix_500x500_B.txt  Matrix_512x512_B.txt
oct_algorithm_implementation/: CMakeLists.txt  main.cpp  profilerCMDs.txt
oct_algorithm_implementation/lib/: CMakeLists.txt
oct_algorithm_implementation/lib/cuda_octalgorithm/: .directory  CMakeLists.txt  README.md
oct_algorithm_implementation/lib/cuda_octalgorithm/include/: .directory  cuda_errorchecking.h  cuda_includes.h  cuda_octkernels.h  cuda_processoctdata.h  cuda_types.h  cuda_utils.h
oct_algorithm_implementation/lib/cuda_octalgorithm/src/: .directory  cuda_octkernels.cu  cuda_processoctdata.cu  cuda_utils.cu  dllmain.cpp
oct_algorithm_implementation/lib/inc/: i_oct_processing.h  oct_convolutionresampling.h  oct_cuda_processing.h
oct_algorithm_implementation/lib/src/: oct_convolutionresampling.cpp  oct_cuda_processing.cpp
